vm/42sh_tester/public/input_logs/error_logs/42sh_632
42sh:1:40: [1m[91merror[0m: unexpected end of file
  1  |  echo $(( (5 + 3 ))                      
     |                                         [1m[91m^[0m
